# Bonnici-Portfolio

./: .dockerignore  .gitignore  .pdm-python  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config_manager.py  database.py  docker-compose.yml  models.py  pyproject.toml
admin/: cli.py  main.py
admin/routes/: admin.py  home.py  messages.py  portfolio.py  profile.py  settings.py  visitors.py  webhooks.py
admin/static/css/: admin.css
admin/static/js/: admin.js  portfolio.js  profile.js
admin/templates/: home.html  layout.html  login.html  messages.html  navbar.html  portfolio.html  profile.html  settings.html  visitor_details.html  visitors.html  webhooks.html
data/: sample.json
data/images/skills/: .gitkeep
front/: main.py  models.py
front-app/: package-lock.json  package.json  vite.config.ts
front-app/src/: App.tsx  index.css
front-app/src/components/: Navbar.tsx  NeuralNetwork.tsx  SectionDots.tsx
front-app/src/components/sections/: About.tsx  Contact.tsx  Doing.tsx  Hero.tsx  Projects.tsx
front-app/src/hooks/: useConfig.ts  usePortfolioFilter.ts
front-app/src/types/: config.ts
front/routes/: home.py
front/static/css/: style.css
front/static/js/: main.js
front/templates/: home.html  layout.html  left_panel.html  main_panel.html  success.html
