[project]
name = "bonnici_portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thomas Bonnici", email = "thomas.bonnici@icloud.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "toml>=0.10.2",
    "SQLAlchemy>=2.0.40",
    "jinja2>=3.1.6",
    "requests>=2.32.3",
    "python-multipart>=0.0.9"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
front = {cmd = "uvicorn front.main:app --reload --host 0.0.0.0 --port 84"}
